[project]
name = "hccl-telegram-vercel-bot"
version = "2.6.0"
description = "HCCL Telegram Bot webhook for Vercel with player DNA, How to Climb, and Match Prediction commands"
requires-python = ">=3.12"
dependencies = [
    "supabase>=2.0.0",
    "python-dotenv>=1.0.0"
]

[tool.vercel]
entrypoint = "api.telegram:handler"
